--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Notificação</title>
+  <link type="image/png" sizes="96x96" rel="icon" href=".../icons8-sino-external-flatart-icons-flat-flatarticons-96.png">
   <style>
     body {
       font-family: Arial, sans-serif;
