--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Notificação</title>
+  <a target="_blank" href="https://icons8.com/icon/pWKxhXaLdaUL/bell">Sino</a> ícone por <a target="_blank" href="https://icons8.com">Icons8</a>
   <link type="image/png" sizes="96x96" rel="icon" href=".../icons8-sino-external-flatart-icons-flat-flatarticons-96.png">
   <style>
     body {
